fix: resolving bug in class to create token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.h2.console.path=/h2-console
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#Spring Security
+api.security.token.prefix=Bearer
+api.security.token.secret=${JWT_SECRET:my-secret-key}
