test: reconfig all project without Spring Security to test api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,10 +8,18 @@ spring.datasource.password=
 # H2 Client
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+#spring.sql.init.mode=always
+#spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Show SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
 
 #Spring Security
 api.security.token.prefix=Bearer
