fix: refactor all project to spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ springdoc.api-docs.path=/v3/api-docs
 #Spring Security
 api.security.token.prefix=Bearer
 api.security.token.secret=${JWT_SECRET:my-secret-key}
+chave.secreta.artigo=${MYJWT_SECRET:chave-default-secret}
+security.headers.frame=false
